    - if mtopic = True in .ini [MQTT section] (or gmqttmtopic = "True" environmental) the smart meter topic will be: energy/meter 
    - smartmeter topic name can be overridden by: 
      - mtopicname = <topicname> in .ini [MQTT] 
      - gmqttmtopicname = "<topicname" environmental 
- (b) fix MQTT message is not sent
2.7.1
- Add coding from Pull req #91 (csv export exentsion)
  Add a CSV export extension in the examples/extensions dir. Closes #76

  One CSV file per day is saved.

  extvar configuration:
  "outpath": path where to save CSV files, default: "/home/pi/grottlog"
  "csvheader": comma separated string with fields to store, defaults to all available fields
- Add parameter to enable message retain in MQTT (#84)
  - .ini [MQTT section] retain = True
  - environmental gmqttretain = "True" (docker: -e gmqttretain = "True") 
- Add parameter to enable sent inverter temperature as temperature value to pvoutput (not advised PVOutemp should be outside temperature) Issue #60
  - .ini [PVOutput section] pvtemp = True
  - environmental gpvtemp = "True" (docker: -e gpvtemp = "True")
- Add parameter to disable sending energytoday to pvoutput (disable V1 input). This should show better avarages. Issue: #51  
  - .ini [PVOutput section] pvdisv1 = True
  - environmental gpvdisv1 = "True" (docker: -e gpvdisv1 = "True")  
- Added first beta of grottserver to act as destination for inverter/datalogger data (remove need to cummunicate with internet).
  - see discussions (#98) for more information: https://github.com/johanmeijer/grott/discussions/98
2.7.2
- added support for  SPH5000 T05nnnnXSPH data record 
2.7.3
- Added detail data record trace information when command is blocked (blockkcmd = True) to be able to analyse command given from growatt website (inverter / data logger setting).
- New version of grottserver (0.0.4) which supports datalogger/inverter read/write commands. 
- added new version of grottserver (0.0.5) with improve error handling (stability)